<resources>
    <string name="app_name">看知乎</string>
    <string name="action_stars">我的收藏</string>
    <string name="action_search">搜索用户</string>
    <string name="action_about">关于</string>
    <string name="action_fav">收藏</string>
    <string name="action_browser">浏览器打开</string>
    <string name="action_exit">退出应用</string>
    <string name="section_article">热门文章</string>
    <string name="section_user">用户动态</string>
    <string name="text_setting">设置</string>
    <string name="hint_search">请输入用户名称或ID</string>
    <string name="hint_refresh">加载失败，请下拉刷新</string>
    <string name="hint_pushrefresh">加载失败，请上拉刷新</string>
    <string name="hint_nonew">暂时没有更新，请稍晚再试\n每日更新时间为5、11、17点</string>
    <string name="hint_loaderror">加载失败，请重试</string>
    <string name="text_recent">近日热门</string>
    <string name="text_yesterday">昨日最新</string>
    <string name="text_archive">历史精华</string>
    <string name="text_articlecount">篇</string>
    <string name="title_activity_article_detail">问答列表</string>
    <string name="title_activity_answer">AnswerActivity</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="section_userdetail">详细资料</string>
    <string name="section_userqxz">知乎排名</string>
    <string name="section_userrecent">近日动态</string>
    <string name="section_userhighvote">高票答案</string>
    <string name="text_signature">用户签名：</string>
    <string name="text_ask">提问</string>
    <string name="text_agree">赞同</string>
    <string name="text_thanks">感谢</string>
    <string name="text_answer">回答</string>
    <string name="text_post">专栏文章</string>
    <string name="text_followee">关注</string>
    <string name="text_fav">收藏</string>
    <string name="text_logs">公共编辑</string>
    <string name="text_follower">被关注</string>
    <string name="text_answerrank">回答</string>
    <string name="text_agreerank">赞同</string>
    <string name="text_ratiorank">平均赞同</string>
    <string name="text_followerrank">被关注</string>
    <string name="text_favrank">收藏</string>
    <string name="text_count1000rank">千赞</string>
    <string name="text_count100rank">百赞</string>
    <string name="text_sorttitle">选择排序条件</string>
    <string name="text_search">搜索</string>
    <string name="text_isfav">已收藏</string>
    <string name="text_cacelfav">取消收藏</string>
    <string name="title_activity_my_fav">我的收藏</string>
    <string name="hint_nofav">当前还没有收藏</string>
    <string name="title_activity_about">关于</string>
    <string name="text_version">当前版本：</string>
    <string name="text_noget_version">当前版本：无法获取</string>
    <string name="text_app_desc">每天三次，看知乎精选。既有长篇干货，也有一句话抖机灵；所有话题兼容并包，人文科技艺术体育职场情感都囊括其中；无添加剂的电脑筛选，不预设立场。如果你是知乎日报的读者或精选集的订阅者，希望你能在这里看到更多原汁原味的答案；如果你还是知乎社区的参与者，希望你除了阅读好答案，还能找到值得关注的人。
</string>
    <string name="text_desc">本应用数据API来源于看知乎(www.kanzhihu.com)，所有内容均来源于知乎(www.zhihu.com)，本应用只提供相应知乎链接，不抓取、转发相关内容，版权归原作者所有。相关事宜请在知乎(www.zhihu.com)上联系原作者。闪屏首页图片来源必应(bing.com),图片版权归原作者所有。</string>
    <string name="umengkey">NTY5OTAyMzg2N2U1OGVhYWIwMDAwYzMw</string>
    <string name="text_checkupdate">检查更新</string>
    <string name="text_firstsetting">浏览设置</string>
    <string name="text_first_message">是否在应用内浏览知乎链接？\n\n确定 使用应用内浏览器\n取消 使用手机浏览器</string>
    <string name="text_ok">确定</string>
    <string name="text_cacel">取消</string>
    <string name="title_activity_setting">设置</string>
    <string name="text_setting_appweb">使用应用内置浏览器</string>
    <string name="text_firsthint">设置已保存，可在“关于”—“设置”中修改</string>
    <string name="text_copyright">&#169;2016&#160;应用版权所有 Awu</string>
    <string name="text_shareto">分享到</string>
    <string name="text_download">下载图片</string>
</resources>
