<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/view_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:text="@string/text_answerrank" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7.5">

            <TextView
                android:id="@+id/tv_answerrank"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:background="@color/colorCrimson"
                android:gravity="center_horizontal"
                android:textColor="@color/colorWhite" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/view_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:text="@string/text_agreerank" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7.5">

            <TextView
                android:id="@+id/tv_agreerank"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:background="@color/colorDarkOrange"
                android:gravity="center_horizontal"
                android:textColor="@color/colorWhite" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/view_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:text="@string/text_ratiorank" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7.5">

            <TextView
                android:id="@+id/tv_ratiorank"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:background="@color/colorYellow"
                android:gravity="center_horizontal"
                android:textColor="@color/colorWhite" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/view_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:text="@string/text_followerrank" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7.5">

            <TextView
                android:id="@+id/tv_followerrank"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:background="@color/colorLimeGreen"
                android:gravity="center_horizontal"
                android:textColor="@color/colorWhite" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/view_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:text="@string/text_favrank" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7.5">

            <TextView
                android:id="@+id/tv_favrank"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:background="@color/colorDarkCyan"
                android:gravity="center_horizontal"
                android:textColor="@color/colorWhite" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/view_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:text="@string/text_count1000rank" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7.5">

            <TextView
                android:id="@+id/tv_count1000rank"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:background="@color/colorDoderBlue"
                android:gravity="center_horizontal"
                android:textColor="@color/colorWhite" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/view_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:text="@string/text_count100rank" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7.5">

            <TextView
                android:id="@+id/tv_count100rank"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:background="@color/colorMediumOrchid"
                android:gravity="center_horizontal"
                android:textColor="@color/colorWhite" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>